@@ -115,6 +115,27 @@
 					<orientation>horizontal</orientation>
 					<focusposition>0</focusposition>
 					<itemgap>0</itemgap>
+					<control type="button" id="900">
+					<description>Run Addon</description>
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>300</width>
+						<height>83</height>
+						<textoffsetx>25</textoffsetx>
+						<align>left</align>
+						<font>Font-Alaska-S34-BL</font>
+						<textcolor>mod-infotags</textcolor>
+						<focusedcolor>eewhite</focusedcolor>
+						<disabledcolor>mod-infotags-l</disabledcolor>
+						<shadowcolor>mod-shadow</shadowcolor>
+						<texturenofocus border="3,90,3,90">views/list/other/separator-v.png</texturenofocus>
+						<texturefocus border="10">views/other/focus-mod.png</texturefocus>
+						<label>518</label>
+						<visible>Stringcompare(Control.GetLabel(7),$LOCALIZE[24021]) + [Substring(ListItem.Property(Addon.ID),script.,left) | Substring(ListItem.Property(Addon.ID),plugin.,left)]</visible>
+						<onclick>Action(Close)</onclick>
+						<onclick condition="Substring(ListItem.Property(Addon.ID),script.,left)">Runscript($INFO[ListItem.Property(Addon.ID)])</onclick>
+						<onclick condition="Substring(ListItem.Property(Addon.ID),plugin.,left)">RunAddon($INFO[ListItem.Property(Addon.ID)])</onclick>
+					</control>
 					<control type="button" id="9">
 						<description>Addon Settings</description>
 						<label>$LOCALIZE[24020]</label>
